Layout bug GROOV-987

--- a/app/themes/groove-tech/stylesheets/groovepacker.less
+++ b/app/themes/groove-tech/stylesheets/groovepacker.less
@@ -2723,3 +2723,7 @@ label.control-label {
     background-color: #de923f;
   }
 }
+
+.min-header-width {
+  min-width: 1100px;
+}
